@@ -42,6 +42,7 @@
       :for-attr="forAttrOfLabel"
       :invalid-message="invalidMessage"
       :show-help-icon="hasDescription"
+      :tabindex="component.tabindex"
       data-test="form-element-label"
       :display-description="displayDescription"
       @toggle-description="toggleDescription"
